--- a/app/src/main/res/layout/categoria_row.xml
+++ b/app/src/main/res/layout/categoria_row.xml
@@ -5,8 +5,11 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
+        android:id="@+id/cardCategoria"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clickable="false"
+        android:onClick="irActivityCategoria"
         android:padding="16dp">
 
         <ImageView
