--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -68,7 +68,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="16dp"
-                android:layout_marginEnd="64dp"
+                android:layout_marginEnd="45dp"
                 android:gravity="center"
                 android:text="@string/tvSeguidores"
                 android:textSize="16sp" />
@@ -77,7 +77,7 @@
                 android:id="@+id/tvSiguiendo"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="64dp"
+                android:layout_marginEnd="45dp"
                 android:gravity="center"
                 android:text="@string/tvSiguiendo"
                 android:textSize="16sp" />
@@ -101,7 +101,7 @@
                 android:layout_width="90dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="16dp"
-                android:layout_marginEnd="54dp"
+                android:layout_marginEnd="32dp"
                 android:text="@string/tvNSeguidores"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -110,7 +110,7 @@
                 android:id="@+id/tvNSiguiendo"
                 android:layout_width="90dp"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="54dp"
+                android:layout_marginEnd="30dp"
                 android:text="@string/tvNSeguidores"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -133,23 +133,22 @@
         android:gravity="center"
         android:text="@string/tvLinea"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
-        app:layout_constraintVertical_bias="0.025" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
 
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="409dp"
-        android:layout_height="220dp"
+        android:layout_height="200dp"
         android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvBibliografia">
 
         <GridView
             android:id="@+id/grid_view"
