11_12 ultima modificacion de clase COMPROBACION === OK Se ha retocado el nombre del vector ic_heart y ahora se llama ic_corazon Tambien se ha modificado un poco las posiciones en el diseño

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -24,7 +24,7 @@
             android:layout_height="180dp"
             android:id="@+id/iv_heart"
             android:adjustViewBounds="true"
-            app:srcCompat="@drawable/ic_heart"/>
+            app:srcCompat="@drawable/ic_casa"/>
 
         <TextView
             android:id="@+id/text_view"
