--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="344dp"
         android:layout_height="292dp"
-        android:layout_marginBottom="112dp"
+        android:layout_marginBottom="50dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,6 +75,7 @@
         android:id="@+id/logoRefind2"
         android:layout_width="217dp"
         android:layout_height="186dp"
+        android:layout_marginTop="15dp"
         android:contentDescription="@string/descripcionLogo"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
