--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,6 +1,15 @@
 <resources>
     <!--
+    TODO: Before you run your application, you need a Google Maps API key.
+
+    To get one, follow this link, follow the directions and press "Create" at the end:
+
     https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=46:6A:EA:CD:0C:CE:C7:52:88:3F:88:A6:DF:00:CA:D2:8D:11:79:97%3Bcom.example.refindproyecto
+
+    You can also add your credentials to an existing key, using these values:
+
+    Package name:
+    com.example.refindproyecto
 
     SHA-1 certificate fingerprint:
     46:6A:EA:CD:0C:CE:C7:52:88:3F:88:A6:DF:00:CA:D2:8D:11:79:97
@@ -8,6 +17,8 @@
     Alternatively, follow the directions here:
     https://developers.google.com/maps/documentation/android/start#get-key
 
+    Once you have your key (it starts with "AIza"), replace the "google_maps_key"
+    string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCx51f1tKCmtzNjAchaEbS5zIF0BM5KlT0</string>
 </resources>
