16_12:1 Añadidos los atributos (latitud y longitud), constructor modificado y getters y setters Ya se muestra en el ActivityAnuncio

--- a/app/src/main/res/layout/activity_anuncio.xml
+++ b/app/src/main/res/layout/activity_anuncio.xml
@@ -11,33 +11,33 @@ tools:context=".ActivityAnuncio">
         android:id="@+id/imgItemDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="40dp"
+        android:contentDescription="TODO"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/avatars"
-        android:contentDescription="TODO" />
+        tools:src="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/tvTituloDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="44dp"
         android:text="@string/nombre_anuncio"
-        app:layout_constraintStart_toEndOf="@+id/imgItemDetail"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgItemDetail" />
 
     <TextView
         android:id="@+id/tvDescripcionDetail"
         android:layout_width="370dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="24dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="56dp"
         android:text="@string/descripcion_anuncio"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.39"
+        app:layout_constraintHorizontal_bias="0.609"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgItemDetail" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTituloDetail" />
 
     <LinearLayout
         android:id="@+id/lyTexto"
@@ -55,20 +55,5 @@ tools:context=".ActivityAnuncio">
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
-
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="35dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:srcCompat="@drawable/ic_flecha_atras"
-        app:layout_constraintBottom_toBottomOf="@+id/imgItemDetail"
-        app:layout_constraintEnd_toStartOf="@+id/imgItemDetail"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        android:contentDescription="TODO" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
