--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primaryColor">#5c8a03</color>
+    <color name="primaryLightColor">#8dba3f</color>
+    <color name="primaryDarkColor">#2c5c00</color>
+    <color name="secondaryColor">#82b21e</color>
+    <color name="secondaryLightColor">#b5e454</color>
+    <color name="secondaryDarkColor">#508200</color>
+    <color name="primaryTextColor">#192138</color>
+    <color name="secondaryTextColor">#06090c</color>
 </resources>
