--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -7,6 +7,19 @@
     android:onClick="createNewContactDialog"
     tools:context=".ActivityPerfil">
 
+    <TextView
+        android:id="@+id/apellidoUsuario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="@string/nombreUsuario"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toEndOf="@+id/fotoUsuario"
+        app:layout_constraintTop_toBottomOf="@+id/nombreUsuario" />
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/fotoUsuario"
         android:layout_width="125dp"
@@ -42,12 +55,12 @@
         android:id="@+id/nombreUsuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="52dp"
         android:text="@string/nombreUsuario"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.123"
+        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toEndOf="@+id/fotoUsuario"
         app:layout_constraintTop_toTopOf="parent" />
 
