--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -60,7 +60,7 @@
                 tools:text="@string/mensajeParaRegistro" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/irRegistroLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="toRegistro"
