--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            android:onClick="iniciarSesion"
             android:text="@string/iniciarSesionLogin" />
 
         <LinearLayout
@@ -60,7 +59,7 @@
                 tools:text="@string/mensajeParaRegistro" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/irRegistroLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="toRegistro"
