--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tvListaCat"
                 android:layout_width="181dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
