--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -20,6 +20,16 @@
         app:layout_constraintStart_toEndOf="@+id/fotoUsuario"
         app:layout_constraintTop_toBottomOf="@+id/nombreUsuario" />
 
+    <Switch
+        android:id="@+id/swSonido"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="16dp"
+        android:text="Switch"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logOut" />
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/fotoUsuario"
         android:layout_width="125dp"
