--- a/app/src/main/res/layout/activity_lista_fav.xml
+++ b/app/src/main/res/layout/activity_lista_fav.xml
@@ -5,30 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ActivityListaFav">
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="167dp"
         android:layout_height="47dp"
-        android:text="Lista"
+        android:text="@string/listaFavoritos"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.047"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022"
-        tools:text="Lista" />
+        app:layout_constraintVertical_bias="0.039"
+        tools:text="@string/listaFavoritos" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecyclerViewFav"
         android:layout_width="416dp"
-        android:layout_height="578dp"
+        android:layout_height="600dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="3dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.0" />
