--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="secondaryDarkColor">#508200</color>
     <color name="primaryTextColor">#192138</color>
     <color name="secondaryTextColor">#06090c</color>
+    <color name="favOn">#FF0000</color>
 </resources>
