Modificado el bottom_nav.xml para que aparezca de colo la activity en la que te encuentras y tambien se ha realizado el adaptador para los comentarios

--- a/app/src/main/res/layout-land/bottom_nav.xml
+++ b/app/src/main/res/layout-land/bottom_nav.xml
@@ -28,7 +28,7 @@
             android:layout_height="50dp"
             android:layout_weight="1"
             android:background="@color/white"
-            app:srcCompat="@drawable/ic_favorito" />
+            app:srcCompat="@drawable/ic_favoritob_off" />
 
         <ImageButton
             android:id="@+id/btnPerfil"
