--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,13 +30,13 @@
         android:background="@drawable/ic_casa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.547"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.323" />
+        app:layout_constraintVertical_bias="0.311" />
 
     <EditText
-        android:id="@+id/popupNombre"
+        android:id="@+id/popupComent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
@@ -53,12 +52,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:textSize="24sp"
-        app:layout_constraintTop_toBottomOf="@+id/popupNombre"
+        app:layout_constraintTop_toBottomOf="@+id/popupComent"
         app:layout_editor_absoluteX="25dp"
         tools:layout_editor_absoluteX="0dp" />
 
     <Button
-        android:id="@+id/btnGuardar"
+        android:id="@+id/btnCGuardar"
         android:text="@string/btnGuardar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -73,7 +72,7 @@
 
     <Button
         android:text="@string/btnCancelar"
-        android:id="@+id/btnCancelar"
+        android:id="@+id/btnCCancelar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
